@@ -313,7 +313,15 @@ public final class TemplatePreprocessingReader extends Reader {
         
         int buffi = 0;
         while (cbufi < last && buffi < bufferSize) {
-            
+
+
+            if (this.buffer[buffi] == '\uFEFF') {
+                // This is a Byte Order Mark (BOM) symbol. We are working at a character level already (as opposed to
+                // a byte level), so we should be fine just ignoring it.
+                buffi++;
+                continue;
+            }
+
             
             /*
              * Process XML_PROLOG (if needed)
